--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -38,6 +38,9 @@
         grid-template-columns: repeat(1, minmax(125px, 1fr)) !important ;
 
     }
+    .shimmer-grid{
+        grid-template-columns: repeat(1, minmax(125px, 1fr)) !important ;
+    }
 }
 @media (max-width: 540px) {
 .desc-content{
@@ -51,6 +54,9 @@ flex-direction: column;
     .similar-content{
         grid-template-columns: repeat(2, minmax(125px, 1fr)) !important ;
 
+    }
+    .shimmer-grid{
+        grid-template-columns: repeat(2, minmax(125px, 1fr)) !important ;
     }
 }
 
@@ -82,5 +88,8 @@ flex-direction: column;
     .similar-content{
         grid-template-columns: repeat(3, minmax(125px, 1fr)) ;
 
+    }
+    .shimmer-grid{
+        grid-template-columns: repeat(3, minmax(125px, 1fr));
     }
 }
