--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@
     width: 85%;
 }
 .product-container{
+    display: grid;
     grid-template-columns: repeat(4, minmax(125px, 1fr));
     width: 100%;
 }
@@ -30,7 +31,16 @@
     display: flex;
     column-gap: 40px;
 }
-@media (max-width: 330px) {
+.close{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, auto));
+    grid-gap: 10px;
+}
+
+.shareModal{
+    transition: all .9s ease;}
+
+    @media (min-width: 0px) and (max-width: 330px) {
     .product-container {
         grid-template-columns: repeat(1, minmax(125px, 1fr)) !important;
     }
@@ -47,7 +57,7 @@
 flex-direction: column;
 }
 }
-@media (max-width: 600px) {
+@media (min-width: 330px) and (max-width: 600px) {
     .product-container{
         grid-template-columns: repeat(2, minmax(125px, 1fr)) !important ;
     }
@@ -93,3 +103,55 @@ flex-direction: column;
         grid-template-columns: repeat(3, minmax(125px, 1fr));
     }
 }
+
+@media (min-width:0px) and (max-width: 660px) {
+    .categoty-content {
+        grid-template-columns: repeat(2, 1fr) !important;
+    }
+}
+@media (min-width:660px) and (max-width: 875px) {
+    .categoty-content {
+        grid-template-columns: repeat(3, 1fr) !important;
+    }
+}
+@media (min-width:875px) and (max-width: 1380px) {
+    .categoty-content {
+        grid-template-columns: repeat(5, 1fr) !important;
+    }
+}
+@media (min-width: 1380px) and (max-width:2560px) {
+    .categoty-content {
+        grid-template-columns: repeat(7, 1fr) !important;
+    }
+}
+
+.shimmer {
+    position: relative;
+    overflow: hidden;
+  }
+  
+  .shimmer::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    height: 100%;
+    width: 100%;
+    background: linear-gradient(
+      90deg,
+      rgba(255, 255, 255, 0.2) 25%,
+      rgba(255, 255, 255, 0.5) 50%,
+      rgba(255, 255, 255, 0.2) 75%
+    );
+    animation: shimmer 1.5s infinite;
+  }
+  
+  @keyframes shimmer {
+    0% {
+      left: -100%;
+    }
+    100% {
+      left: 100%;
+    }
+  }
+  
